tests/userdata_derive/invalid_field_attr.rs
#[derive(Clone, mlua::FromLua, mlua::UserData)]
struct MyStruct {
    #[field = "name"]
    number: u64,
}

fn main() {}
